add filter order in shipper